Change title, metatags, icons and few texts

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
+        <meta name="description" content="If you need your business in the web, you are at right place, apps, games, systems, digital marketing and much more.">
         <meta name="author" content="">
-        <title>Freelancer - Start Bootstrap Theme</title>
+        <title>IolanTech - Apps, Landing Pages, Games, web ddevelopment</title>
         <!-- Font Awesome icons (free version)-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -34,11 +34,13 @@
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/avataaars (1).png" alt="">
                 <!-- Masthead Heading-->
-                <h1 class="masthead-heading mb-0">Helpting to develop your future on the web</h1>
+                <h1 class="masthead-heading mb-0">Helpting to develop your future in the web</h1>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-icon mr-3"><i class="fas fa-laptop"></i></div>
+                    <div class="divider-custom-icon mr-3"><i class="fas fa-gamepad"></i></div>
+                    <div class="divider-custom-icon"><i class="fas fa-desktop"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
@@ -283,7 +285,7 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ml-auto">
-                        <p class="pre-wrap lead">DEVELOPMENT:
+                        <p class="pre-wrap lead font-weight-bold">DEVELOPMENT:
 - Apps for Android
 - Games in javascript
 - PHP, Javascript or Python 
@@ -297,7 +299,7 @@ MARKETING AND SOCIAL MEDIA:
 - Digital Marketing to make your business grown.</p>
                     </div>
                     <div class="col-lg-4 mr-auto">
-                        <p class="pre-wrap lead">DESIGN:
+                        <p class="pre-wrap lead font-weight-bold">DESIGN:
 - Photoshop: 
     Design templates, mockups, logos
 
