Fixing few template bugs

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- Font Awesome icons (free version)-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet">
+        <link href="css/styles.css" rel="stylesheet"> 
         <!-- Fonts CSS-->
         <link rel="stylesheet" href="css/heading.css">
         <link rel="stylesheet" href="css/body.css">
@@ -34,13 +34,14 @@
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/avataaars (1).png" alt="">
                 <!-- Masthead Heading-->
-                <h1 class="masthead-heading mb-0">Helpting to develop your future in the web</h1>
+                <h1 class="masthead-heading mb-0">Helping to develop your future in the web</h1>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon mr-3"><i class="fas fa-laptop"></i></div>
                     <div class="divider-custom-icon mr-3"><i class="fas fa-gamepad"></i></div>
-                    <div class="divider-custom-icon"><i class="fas fa-desktop"></i></div>
+                    <div class="divider-custom-icon mr-3"><i class="fas fa-desktop"></i></div>
+                    <div class="divider-custom-icon"><i class="fas fa-mobile"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
