Change the avatar and the welcome message

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         </nav>
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
-                <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/avataaars (1).png" alt="">
+                <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/avatar.png" alt="">
                 <!-- Masthead Heading-->
-                <h1 class="masthead-heading mb-2" style="font-size:2.2rem;">Hi, my name is Thiago, i am a web developer, and i can build amazing things on the web for you, be welcome to the digital evolution.</h1>
+                <h1 class="masthead-heading mb-2" style="font-size:2.2rem;">Hi, my name is Thiago, and i can build amazing things on the web for you, be welcome to the digital evolution.</h1>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
